[QuoteBundle][InvoiceBundle] Fix column spacing on create page

--- a/src/CSBill/CoreBundle/Resources/public/less/styles.less
+++ b/src/CSBill/CoreBundle/Resources/public/less/styles.less
@@ -19,3 +19,16 @@
 div.pagination > ul {
     .pagination;
 }
+
+/* QUOTE / INVOICE
+*******************/
+
+#quote-rows, #inoive-rows {
+    .column-price, .column-total {
+        width: 20%;
+    }
+
+    .column-qty {
+        width: 8%;
+    }
+}
